[package]
name = "raw-window-handle"
version = "0.6.2"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2021"
description = "Interoperability library for Rust Windowing applications."
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/rust-windowing/raw-window-handle"
keywords = ["windowing"]
readme = "README.md"
documentation = "https://docs.rs/raw-window-handle"
rust-version = "1.64"

[features]
alloc = []
std = ["alloc"]

[dev-dependencies]
static_assertions = "1.1.0"

[target.'cfg(target_family = "wasm")'.dev-dependencies.wasm-bindgen]
version = "0.2.87"
default-features = false
features = ["std"]

[target.'cfg(target_family = "wasm")'.dev-dependencies.web-sys]
version = "0.3.85"
default-features = false
features = ["HtmlCanvasElement", "OffscreenCanvas", "Window", "Document"]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
