[package]
name = "raw-window-handle"
version = "0.6.2"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2024"
description = "Interoperability library for Rust Windowing applications."
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/rust-windowing/raw-window-handle"
keywords = ["windowing"]
readme = "README.md"
documentation = "https://docs.rs/raw-window-handle"
rust-version = "1.85"

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dev-dependencies]
static_assertions = "1.1.0"

[target.'cfg(target_family = "wasm")'.dev-dependencies.wasm-bindgen]
version = "0.2.87"
default-features = false
features = ["std"]

[target.'cfg(target_family = "wasm")'.dev-dependencies.web-sys]
version = "0.3.85"
default-features = false
features = ["HtmlCanvasElement", "OffscreenCanvas", "Window", "Document"]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_vendor = "apple")'.dev-dependencies]
objc2 = "0.6.4"

[target.'cfg(all(target_vendor = "apple", not(target_os = "macos")))'.dev-dependencies]
objc2-ui-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "UIResponder",
    "UIView",
    "UIWindow",
    "UIViewController",
] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSResponder",
    "NSView",
    "NSWindow",
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
